# voltran-survey-app

./: .gitignore  README.md  manage.bat  pyproject.toml
core/: admin.py  models.py  question_handlers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_correlation_agreement_alter_question_question.py  0003_question_correlation_delete_correlation.py  0004_alter_question_correlation.py  0005_alter_question_correlation.py  0006_rename_question_question_question_text.py  0007_alter_question_correlation.py  0008_alter_question_correlation.py  0009_remove_question_correlation_and_more.py  0010_remove_choice_question_question_choice_and_more.py  0011_remove_question_choice_remove_question_question_text_and_more.py  0012_alter_question_answer.py  0013_alter_question_answer.py  0014_alter_question_answer.py  0015_remove_question_answer.py  0016_alter_question_question.py
core/static/css/: index.css  radios.css  results.css
core/static/js/: helpers.js  main.js  question-navigation.js
core/templates/: 404.html  base.html  index.html  questions.html  results.html
polls/: asgi.py  settings.py  urls.py
