[tool.poetry]
name = "self-django-polls"
version = "0.1.0"
description = "A simple polls app that I've created for the team Voltran (see First Lego League)"
authors = ["DrShahinstein <1taylanozturk@protonmail.com>"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
